# simpledi-rs

./: Cargo.toml  README.md
src/: di.rs  lib.rs  macrorule.rs
tests/: di_test.rs
