[package]
name = "simpledi-rs"
version = "0.1.0"
description = "simpledi-rs, a simple and thread-safe dependency injection library"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"
keywords = ["dependency injection", "singleton"]
categories = ["rust-patterns"]
homepage = "https://github.com/innobead/simpledi-rs"
repository = "https://github.com/innobead/simpledi-rs"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
anyhow = "1.0"
